--- a/designs/simulation/plot_config.yaml
+++ b/designs/simulation/plot_config.yaml
@@ -5,13 +5,11 @@ X:
   label: "Time (s)"
   signal_key: "raw.time"
 
-Y_axes:
-  - Y1:
-    label: "Voltage (V)"
+Y:
+  - label: "Voltage (V)"
     signals:
       BUS06: "v(bus06)"
-      BUS08: "v(bus07)"
-  - Y2:
-    label: "Voltage (V)"
+      BUS07: "v(bus07)"
+  - label: "Voltage (V)"
     signals:
-      BUS06: "v(bus08)"
+      BUS08: "v(bus08)"
